--- a/bomberos-app/src/app/components/recover-user-password/recover-user-password.scss
+++ b/bomberos-app/src/app/components/recover-user-password/recover-user-password.scss
@@ -1,4 +1,7 @@
+// 1. Importamos el módulo de color de Sass
 @use 'sass:color';
+
+// --- PALETA DE COLORES INSTITUCIONAL ---
 $bomberos-rojo-institucional: #B71C1C;
 $bomberos-rojo-oscuro: #7F0000;
 $bomberos-negro: #1a1a1a;
@@ -54,9 +57,7 @@ $bomberos-blanco: #FFFFFF;
     overflow: hidden;
     z-index: 10;
     box-sizing: border-box;
-
     animation: fadeIn 0.6s ease-out both;
-
     margin-top: auto;
     margin-bottom: auto;
 }
@@ -100,7 +101,6 @@ $bomberos-blanco: #FFFFFF;
         }
     }
 }
-
 .bottom-form-panel {
     padding: 30px 40px;
     display: flex;
@@ -217,6 +217,7 @@ $bomberos-blanco: #FFFFFF;
         letter-spacing: 0.5px;
     }
 }
+
 
 @media (max-width: 599px) {
     .main-login-container {
