--- a/bomberos-app/src/styles.scss
+++ b/bomberos-app/src/styles.scss
@@ -1,30 +1,60 @@
 @import "@angular/material/prebuilt-themes/indigo-pink.css";
 
-html, body { 
-    height: 100%; 
+
+
+html,
+body {
+
+  height: 100%;
+
 }
-body { 
-    margin: 0; 
-    font-family: Roboto, "Helvetica Neue", sans-serif; 
-    background-color: #ffffff; 
+
+body {
+
+  margin: 0;
+
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+
+  background-color: #ffffff;
+
 }
+
+
 
 .mdc-text-field--filled:not(.mdc-text-field--disabled) {
-    background-color: #fff !important;
+
+  background-color: #fff !important;
+
 }
+
+
 
 .mat-primary {
-    --mdc-theme-primary: #d32f2f;
-    --mdc-theme-on-primary: #fff;
+
+  --mdc-theme-primary: #d32f2f;
+
+  --mdc-theme-on-primary: #fff;
+
 }
+
+
 
 .mat-warn {
-    --mdc-theme-primary: #d32f2f;
-    --mdc-theme-on-primary: #fff;
+
+  --mdc-theme-primary: #d32f2f;
+
+  --mdc-theme-on-primary: #fff;
+
 }
 
+
+
 /* Agrega esto al final de tu styles.scss */
+
 app-root {
+
   display: block;
+
   height: 100%;
+
 }
